Use customized leveldbjni for ARM platform
This change hadoop to use leveldbjni for ARM platform in
org.openlabtesting.leveldbjni repo.
This patch is cherry-picked from
ac6b6a6 in Trunk

--- a/hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-hs/pom.xml
+++ b/hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-hs/pom.xml
@@ -64,7 +64,7 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.fusesource.leveldbjni</groupId>
+      <groupId>${leveldbjni.group}</groupId>
       <artifactId>leveldbjni-all</artifactId>
     </dependency>
   </dependencies>
